--- a/src/views/index.html
+++ b/src/views/index.html
@@ -204,7 +204,6 @@
     </div>
 </nav>
 
-
     <div class="main">
 
         <div class="background">
@@ -215,15 +214,16 @@
             <h1>Welcome to STORM</h1>
             <p>Project STORM is a web based optimization application. Designed to shuffle subjects into groups, based on their attributes, as the user requires. </p>
             <br>
-            <div class="container-fluid">
+            <div class="container">
                 <div class="vid">
             <video poster="vid.jpg" width="640" height="480" controls>
                 <source src="movie.mp4" type="video/mp4">
                 There will be a video of STORM being used.
                 </video>
                 <br>
-                <a href="/demo"><button class="btn btn-default" >Try it yourself</button></a>
+
             </div>
+
             <div class="signup">
             <p class="signHeadings">Don't have an account?<br>Sign up here.</p>
             <form id="signUpForm">
