--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -20,15 +20,7 @@
 <script>$(document).ready(function(e){
     //array van subject objects
     var subjects = JSON.parse($('#jsondat').text());
-    for(var i = 0; i < subjects.length; i++)
-    {
-        if(subjects.name == undefined)
-        {
-            $('#subjects').append('<div class="subject" id="' + subjects[i].id + '" draggable="true" ondragstart="drag(event)">' + subjects[i].Name + "<div style='float: right'>" + "|" + subjects[i].Mark + "</div>" + '</div>');
-        }
-        else
-            $('#subjects').append('<div class="subject" id="' + subjects[i].id + '" draggable="true" ondragstart="drag(event)">' + subjects[i].name + '</div>');
-    }
+
 
 });</script>
 <body>
@@ -46,8 +38,38 @@
         </div>
     </div>
 </nav>
+<div class="subjectBox panel panel-default" style="margin: 0;">
+    <div class="panel-heading" data-toggle="collapse" data-target="#subjectSetup">Subject setup</div>
+    <div class="panel-body collapse" id="subjectSetup">
+        <table class="table" id="subjTable">
+            <thead><tr id="subjectFields">
+
+            </tr></thead>
+            <tbody id="subjectsTable">
+
+            </tbody>
+        </table>
+        <button class="btn btn-default">Save</button>
+        <button class="btn btn-default">Reload</button>
+    </div>
+</div>
+<div class="algorithmBox panel panel-default" style="margin: 0;">
+    <div class="panel-heading" data-toggle="collapse" data-target="#shuffleSetup">Shuffle setup</div>
+    <div class="panel-body collapse" id="shuffleSetup">
+        <div class="shuffling_selection">
+            <p id="shuffleHeading" style="font-size: large">Shuffling Method</p>
+            <button name="Randomize" id="randomize">Randomize</button><br><br>
+            <button name="Shuffle By" id="shuffle">Shuffle Teams By</button><br>
+
+            <input type="radio" name="shuffleRad" value="0" checked > Diverse <br>
+            <input type="radio" name="shuffleRad" value="1" > Similar
+        </div>
+    </div>
+</div>
+
 
     <div class="main">
+        <div style="text-align: left; margin:5px;" id="selectFields">Show fields: <br></div>
         <div class="teamSetup">
             <div class="members">
                 <p style="font-size: large">Subject Pool</p>
@@ -65,14 +87,6 @@
 
             </div>
 
-            <div class="shuffling_selection">
-                <p id="shuffleHeading" style="font-size: large">Shuffling Method</p>
-                <button name="Randomize" id="randomize">Randomize</button><br><br>
-                <button name="Shuffle By" id="shuffle">Shuffle Teams By</button><br>
-
-                <input type="radio" name="shuffleRad" value="0" checked > Diverse <br>
-                <input type="radio" name="shuffleRad" value="1" > Similar
-            </div>
 
             <div class="teams">
                 <p style="font-size: large; text-align: center">Teams</p>
