--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -173,20 +173,20 @@ BODY:last-child .signin {
     width: 100%;
 	vertical-align:top;
     margin-top:50px;
+
 }
 
-.members{
-    text-align: left;
-    height: 300px;
-    display: inline-block;
-	vertical-align:top;
-}
 
 .teams{
     text-align: left;
     display: inline-block;
     vertical-align:top;
-    margin-left:50px;
+    padding-left:400px;
+    width: 100%;
+    height: 100%;
+    resize: vertical;
+    position: relative;
+
 }
 
 .names{
@@ -199,14 +199,16 @@ BODY:last-child .signin {
 }
 
 .members{
-    width:200px;
-    height:300px;
+    position: absolute;
+    resize: horizontal;
+    width:300px;
     float:left;
-    margin-left:10%;
+    margin-left:15px;
     text-align: center;
 }
 
 .teamTables{
+    resize: both;
     width: 250px;
     height: 300px;
     display: inline-block;
@@ -215,6 +217,7 @@ BODY:last-child .signin {
     border: solid 1pt;
     overflow:auto;
     margin-left:5px;
+    padding: 10px;
 }
 
 .teamAdd{
