--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -81,7 +81,7 @@
             <div class="members">
                 <p style="font-size: large">Subject Pool</p>
 
-                <div id="subjects" class="names" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div id="subjects" class="names">
                     <!--<%for(var i = 0; i < subjects.length; i++){%>
                     <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
                     </div> <% } %> -->
