added manage projects event

--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -34,8 +34,8 @@
     </div>
 
     <div class="panel panel-primary" id="Projects">
-        <div class="panel-heading">
-            <h3 id="ProjectsTitle" class="panel-title">My Projects</h3>
+        <div id="ProjectsTitle" class="panel-heading clearfix">
+            <h3  class="panel-title pull-left" style='padding-top: 7.5px;'>My Projects</h3>
         </div>
         <div  class="loader panel-body" id="MyProjects"></div>
     </div>
