Styling changes and fixed DOM bugs

--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -477,9 +477,6 @@ section {
 .projLink:hover{
     text-decoration: none;
 }
-.singleProject:hover{
-    background-color: rgba(0, 6, 255, 0.18);
-}
 .singleProject{
     margin-top: 0px;
     margin-bottom: 5px;
@@ -488,6 +485,7 @@ section {
 
 #AddProjects
 {
+    margin-bottom:30px;
     position: relative;
     padding-top: 40px;
     margin-left: 30%;
