--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -59,22 +59,17 @@
     </div>
 </div>
 <div class="algorithmBox panel panel-default" style="margin: 0;">
-    <div class="panel-heading" data-toggle="collapse" data-target="#shuffleSetup">Shuffle setup</div>
-    <div class="panel-body collapse" id="shuffleSetup">
-        <div class="shuffling_selection">
-            <p id="shuffleHeading" style="font-size: large">Shuffling Method</p>
-            <button name="Randomize" id="randomize">Randomize</button><br><br>
-            <button name="Shuffle By" id="shuffle">Shuffle Teams By</button><br>
-
-            <input type="radio" name="shuffleRad" value="0" checked > Diverse <br>
-            <input type="radio" name="shuffleRad" value="1" > Similar
-        </div>
+    <div class="panel-heading" data-toggle="collapse" data-target="#shuffleSetup">Shuffle setup<button class="form-control" id="shuffle">Shuffle</button> </div>
+    <div class="panel-body collapse container-fluid" id="shuffleSetup">
+    <div class="row" id="shuffleRow">
+    <div><button type='button' id='addAlg'><span aria-hidden='true'>+</span> </button></div>
+    </div>
     </div>
 </div>
 
 <div style="height: 100px;">
     <div style="text-align: left; margin:5px; position: absolute;" id="selectFields">Show fields: <br></div>
-    <div style="text-align: right; float: right; margin:20px;  ">Number of teams:<input id="totalTeams" type="number" min="0"/><br><br></div>
+    <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
 </div>
     <div class="main">
 
