--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -51,6 +51,7 @@
         </table>
         <button class="btn btn-default">Save</button>
         <button class="btn btn-default">Reload</button>
+        <button id="exportMasterTable" class="btn btn-default">Export CSV</button>
     </div>
 </div>
 <div class="algorithmBox panel panel-default" style="margin: 0;">
