--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -465,11 +465,11 @@ section {
 #totalTeams, #maxPerGroup{
     width:50px;
 }
-#shuffle{
+#shuffle, #exportGroups{
     width: 70px;
     float: right;
     margin-right: 15px;
-    margin-top: -5px;
+    margin-top: 5px;
 }
 #Projects{
     opacity: 0.8;
