Added some functionality

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -32,8 +32,8 @@
             <a id="logOutBtn" href=""><button class="btn btn-default">Log Out</button> </a>
         </div>
         <div class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">My Projects</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/projectHome">My Projects</a></li>
 
         </div>
     </div>
@@ -71,6 +71,8 @@
 <div class="container">
     <button style="width: 100px; float:left;" class="form-control" id="shuffle">Shuffle</button>
     <button style="width: 125px; float:left;" class="form-control" id="exportGroups">Download CSV</button>
+    <button style="width: 125px; float:left;" class="form-control" id="saveIteration">Save Iteration</button>
+    <button style="width: 125px; float:left;" class="form-control" id="returnSubjs">Return All</button>
 </div>
     <div class="main">
 
