--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -32,9 +32,9 @@
             <a id="logOutBtn" href=""><button class="btn btn-default">Log Out</button> </a>
         </div>
         <div class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">My Projects</a></li>
-
+            <li><a id="MyProjectsPage" href="#">My Projects</a></li>
+            <li ><a href="/about">About</a></li>
+            <li ><a href="/contact">Contact</a></li>
         </div>
     </div>
 </nav>
