--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -17,7 +17,7 @@
 
     <div class="container-fluid">
         <div class="navbar-form navbar-right" id="righty">
-            <a id="logOutBtn" href="#"><button class="btn btn-default">Log Out</button> </a>
+            <span class="text-primary"  id="usernm"></span> : <a id="logOutBtn" href="#"><button class="btn btn-default">Log Out</button> </a>
         </div>
         <div class="nav navbar-nav ">
             <li class="active"><a href="/">My Projects</a></li>
