Added button to upload .csv to add criteria

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -46,10 +46,11 @@
 </nav>
 <div class="subjectBox panel panel-default" style="margin: 0;">
     <div class="panel-heading" data-toggle="collapse" data-target="#subjectSetup">Subject setup</div>
-    <div class="panel-body collapse" id="subjectSetup">
+    < class="panel-body collapse" id="subjectSetup">
         <div id="subjTable"></div>
         <button id="saveMasterToDB" class="btn btn-default">Save</button>
         <button id="exportMasterTable" class="btn btn-default">Export CSV</button>
+        <button id='uploadCSV' class="btn btn-default">Upload CSV </button>
     </div>
 </div>
 <div class="algorithmBox panel panel-default" style="margin: 0;">
