--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <script src="scripts/algorithm.js"></script>
     <script src="scripts/shuffling.js"></script>
-    <script src="views/tests.js"></script>
 </head>
 <p hidden="true" id="jsondat"><%-JSON.stringify(subjects);%></p>
 <script>$(document).ready(function(e){
@@ -34,7 +33,7 @@
     <div class="container-fluid">
         <div class=" navbar-form navbar-right" id="righty">
 
-            <a id="logOutBtn" href=""><button class="btn btn-default">Log Out</button> </a>
+            <a id="logOutBtn"><button class="btn btn-default">Log Out</button> </a>
         </div>
         <div class="nav navbar-nav">
 
