--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -27,6 +27,18 @@
 
 
 });</script>
+
+<!--Scripting for Google-Chart API-->
+<!--Load the AJAX API-->
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
+
+    // Load the Visualization API library and the piechart library.
+    google.load('visualization', '1', {'packages':['corechart']});
+    google.setOnLoadCallback(drawChart);
+    // ... draw the chart...
+
+</script>
 <body>
 <nav class="navbar navbar-default">
 
@@ -91,13 +103,19 @@
 
             </div>
 
-
             <div class="teams">
                 <p style="font-size: large; text-align: center">Sandbox</p>
                 <!-- This is how the team boxes will look like -->
                 <!-- <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"></div> -->
                 <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
             </div>
+
+        <div class="mainChart">
+            <p style="font-size: large; text-align: center">Chart Test</p>
+            <!-- Testing Chart implementation -->
+
+            <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
+        </div>
 
     </div>
 
