Working on graphs

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -115,6 +115,9 @@
             <!-- Testing Chart implementation -->
 
             <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
+            <div id="chart_lines" style="width: 900px; height: 500px;"></div>
+            <div id="curve_chart" style="width: 900px; height: 500px"></div>
+
         </div>
 
     </div>
