--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -75,6 +75,7 @@
     <button style="width: 125px; float:left;" class="form-control" id="exportGroups">Download CSV</button>
     <button style="width: 125px; float:left;" class="form-control" id="saveIteration">Save Iteration</button>
     <button style="width: 125px; float:left;" class="form-control" id="returnSubjs">Return All</button>
+    <button style="width: 125px; float:left;" class="form-control" id="randomize">Randomize</button>
 </div>
     <div class="main">
 
