--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -11,6 +11,7 @@
     <script src="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
     <script src="scripts/projectSetup.js"></script>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script src="scripts/jquery.csv-0.71.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -20,7 +21,7 @@
             <span class="text-primary"  id="usernm"></span> : <a id="logOutBtn" href="#"><button class="btn btn-default">Log Out</button> </a>
         </div>
         <div class="nav navbar-nav ">
-            <li class="active"><a href="/">My Projects</a></li>
+            <li class="active"><a href="#">My Projects</a></li>
             <li ><a href="/about">About</a></li>
             <li ><a href="/contact">Contact</a></li>
         </div>
