--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -97,6 +97,10 @@
                     <!--<%for(var i = 0; i < subjects.length; i++){%>
                     <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
                     </div> <% } %> -->
+
+                </div>
+                <div id="poolChart" class="names">
+
                 </div>
                 <br><br><br>
 
@@ -117,6 +121,7 @@
             <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
             <div id="chart_lines" style="width: 900px; height: 500px;"></div>
             <div id="curve_chart" style="width: 900px; height: 500px"></div>
+            <div id="curve_chart2" style="width: 900px; height: 500px"></div>
 
         </div>
 
