reload and table fix

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -46,7 +46,7 @@
 </nav>
 <div class="subjectBox panel panel-default" style="margin: 0;">
     <div class="panel-heading" data-toggle="collapse" data-target="#subjectSetup">Subject setup</div>
-    <div class="panel-body collapse" id="subjectSetup">
+    <div class="panel-body collapse in" id="subjectSetup">
         <div id="subjTable"></div>
         <button id="saveMasterToDB" class="btn btn-default">Save</button>
         <button id="exportMasterTable" class="btn btn-default">Export CSV</button>
