Working on graphs

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -114,16 +114,16 @@
                 <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
             </div>
 
-        <div class="mainChart">
+       <!-- <div class="mainChart">
             <p style="font-size: large; text-align: center">Chart Test</p>
-            <!-- Testing Chart implementation -->
+            <!-- Testing Chart implementation
 
             <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
             <div id="chart_lines" style="width: 900px; height: 500px;"></div>
             <div id="curve_chart" style="width: 900px; height: 500px"></div>
             <div id="curve_chart2" style="width: 900px; height: 500px"></div>
 
-        </div>
+        </div>-->
 
     </div>
 
