Graphs, new Divs

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -79,7 +79,6 @@
 
 <div style="height: 100px;">
     <div style="text-align: left; margin:5px; position: absolute;" id="selectFields">Show fields: <br></div>
-
     <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
 </div>
 <div class="container">
@@ -99,9 +98,7 @@
             </div> <% } %> -->
 
         </div>
-        <div id="poolChart" class="names">
 
-        </div>
         <br><br><br>
 
 
@@ -114,16 +111,18 @@
         <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
     </div>
 
-    <!-- <div class="mainChart">
-         <p style="font-size: large; text-align: center">Chart Test</p>
-         <!-- Testing Chart implementation
+    <div class="mainChart">
+        <p style="font-size: large; text-align: center">Charts</p>
+        <div id="poolChart">
 
-         <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
-         <div id="chart_lines" style="width: 900px; height: 500px;"></div>
-         <div id="curve_chart" style="width: 900px; height: 500px"></div>
-         <div id="curve_chart2" style="width: 900px; height: 500px"></div>
+        </div>
 
-     </div>-->
+        <!-- <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
+        <div id="chart_lines" style="width: 900px; height: 500px;"></div>
+        <div id="curve_chart" style="width: 900px; height: 500px"></div>
+        <div id="curve_chart2" style="width: 900px; height: 500px"></div> -->
+
+    </div>
 
 </div>
 
