--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -171,7 +171,7 @@ BODY:last-child .signin {
     height: 300px;
     display: inline-block;
     width: 100%;
-	vertical-align:top;
+    vertical-align:top;
     margin-top:50px;
 
 }
@@ -218,7 +218,7 @@ BODY:last-child .signin {
     width: 250px;
     height: 300px;
     display: inline-block;
-	vertical-align:top;
+    vertical-align:top;
     background:#EAF2FE;
     border: solid 1pt;
     overflow:auto;
@@ -226,6 +226,20 @@ BODY:last-child .signin {
     padding: 10px;
     z-index: 2;
 }
+.charts{
+    resize: both;
+    width: 250px;
+    height: 300px;
+    display: inline-block;
+    vertical-align:top;
+    background:#EAF2FE;
+    border: solid 1pt;
+    overflow:auto;
+    margin:5px;
+    padding: 10px;
+    z-index: 2;
+}
+
 .algPart{
     width: 200px;
     resize: horizontal;
@@ -268,7 +282,7 @@ BODY:last-child .signin {
 
 #randomize
 {
-	margin-left: 0px;
+    margin-left: 0px;
 }
 
 .ui-widget
