--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="style/css.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script src="scripts/charts.js"></script>
     <script src="scripts/algorithm.js"></script>
     <script src="scripts/shuffling.js"></script>
 </head>
@@ -27,15 +28,12 @@
 
 
 });</script>
-
-<!--Scripting for Google-Chart API-->
-<!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
 
     // Load the Visualization API library and the piechart library.
     google.load('visualization', '1', {'packages':['corechart']});
-    google.setOnLoadCallback(drawChart);
+    google.setOnLoadCallback(drawExampleChart);
     // ... draw the chart...
 
 </script>
@@ -58,7 +56,7 @@
 </nav>
 <div class="subjectBox panel panel-default" style="margin: 0;">
     <div class="panel-heading" data-toggle="collapse" data-target="#subjectSetup">Subject setup</div>
-    <div class="panel-body collapse" id="subjectSetup">
+    <div class="panel-body collapse in" id="subjectSetup">
         <div id="subjTable"></div>
         <button id="saveMasterToDB" class="btn btn-default">Save</button>
         <button id="exportMasterTable" class="btn btn-default">Export CSV</button>
@@ -71,64 +69,63 @@
 <div class="algorithmBox panel panel-default" style="margin: 0;">
     <div class="panel-heading" data-toggle="collapse" data-target="#shuffleSetup">Shuffle setup </div>
     <div class="panel-body collapse container-fluid" id="shuffleSetup">
-        <div class="row" id="shuffleRow">
-            <div><button type='button' id='addAlg'><span aria-hidden='true'>+</span> </button></div>
-        </div>
+    <div class="row" id="shuffleRow">
+    <div><button type='button' id='addAlg'><span aria-hidden='true'>+</span> </button></div>
+    </div>
     </div>
 </div>
 
 <div style="height: 100px;">
     <div style="text-align: left; margin:5px; position: absolute;" id="selectFields">Show fields: <br></div>
-    <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
+
+    <div style="text-align: right; float: right; margin:20px;  ">Max per group:<input id="maxPerGroup" type="number" readonly min="0"/>Number of groups:<input id="totalTeams" type="number" min="0"/><br><br></div>
 </div>
 <div class="container">
     <button style="width: 100px; float:left;" class="form-control" id="shuffle">Shuffle</button>
     <button style="width: 125px; float:left;" class="form-control" id="exportGroups">Download CSV</button>
     <button style="width: 125px; float:left;" class="form-control" id="saveIteration">Save Iteration</button>
     <button style="width: 125px; float:left;" class="form-control" id="returnSubjs">Return All</button>
+    <button style="width: 125px; float:left;" class="form-control" id="randomize">Randomize</button>
 </div>
-<div class="main">
+    <div class="main">
 
-    <div class="members">
-        <p style="font-size: large">Subject Pool</p>
+            <div class="members">
+                <p style="font-size: large">Subject Pool</p>
 
-        <div id="subjects" class="names">
-            <!--<%for(var i = 0; i < subjects.length; i++){%>
-            <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
-            </div> <% } %> -->
+                <div id="subjects" class="names">
+                    <!--<%for(var i = 0; i < subjects.length; i++){%>
+                    <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
+                    </div> <% } %> -->
+                </div>
+                <br><br><br>
 
+
+            </div>
+
+
+            <div class="teams">
+                <p style="font-size: large; text-align: center">Sandbox</p>
+                <!-- This is how the team boxes will look like -->
+                <!-- <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"></div> -->
+                <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
+            </div>
+
+        <div class="mainChart" id="mainChart">
+            <p style="font-size: large; text-align: center">Charts</p>
+            <div id="poolChart"></div>
+
+            <!-- <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
+            <div id="chart_lines" style="width: 900px; height: 500px;"></div>
+            <div id="curve_chart" style="width: 900px; height: 500px"></div>
+            <div id="curve_chart2" style="width: 900px; height: 500px"></div>
+            <div id="exampleChart"></div>
         </div>
 
-        <br><br><br>
-
-
     </div>
 
-    <div class="teams">
-        <p style="font-size: large; text-align: center">Sandbox</p>
-        <!-- This is how the team boxes will look like -->
-        <!-- <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"></div> -->
-        <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
-    </div>
 
-    <div class="mainChart">
-        <p style="font-size: large; text-align: center">Charts</p>
-        <div id="poolChart">
-
-        </div>
-
-        <!-- <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
-        <div id="chart_lines" style="width: 900px; height: 500px;"></div>
-        <div id="curve_chart" style="width: 900px; height: 500px"></div>
-        <div id="curve_chart2" style="width: 900px; height: 500px"></div> -->
-
-    </div>
-
-</div>
-
-
-<br>
-<div id="dialog-confirm"></div>
+    <br>
+    <div id="dialog-confirm"></div>
 
 </body>
 
