Modified charts, added Averages and StdDeviation

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -110,6 +110,7 @@
         <div class="mainChart" id="mainChart">
             <p style="font-size: large; text-align: center">Charts</p>
             <div id="poolChart"></div>
+            <div id="globalChart"></div>
 
             <!-- <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
             <div id="chart_lines" style="width: 900px; height: 500px;"></div>
