new groups load all headers

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -85,6 +85,8 @@
     <button style="width: 125px; float:left;" class="form-control" id="saveIteration">Save Iteration</button>
     <button style="width: 125px; float:left;" class="form-control" id="returnSubjs">Return All</button>
     <button style="width: 125px; float:left;" class="form-control" id="randomize">Randomize</button>
+    <select style="width: 50px;" id="iterationSelect"></select>
+    <button style="width: 125px; float:left;" class="form-control" id="loadIteration">Load Iteration</button>
 </div>
     <div class="main">
 
