--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -13,6 +13,7 @@
     <link type="text/css" rel="stylesheet" href="APIs/jsgrid/jsgrid-theme.min.css" />
     <script src="APIs/jsgrid/jsgrid.min.js"></script>
     <script src="scripts/teamSetupJS.js"></script>
+    <script src="scripts/charts.js"></script>
     <script src="scripts/jquery.csv-0.71.min.js"></script>
 
     <link rel="stylesheet" href="style/css.css">
@@ -32,7 +33,6 @@
 
     // Load the Visualization API library and the piechart library.
     google.load('visualization', '1', {'packages':['corechart']});
-    google.setOnLoadCallback(drawExampleChart);
     // ... draw the chart...
 
 </script>
@@ -112,12 +112,7 @@
         <div class="mainChart" id="mainChart">
             <p style="font-size: large; text-align: center">Charts</p>
             <div id="poolChart"></div>
-
-            <!-- <div class="pieChart" id="chartDiv"  style="width:400; height:300"> </div>
-            <div id="chart_lines" style="width: 900px; height: 500px;"></div>
-            <div id="curve_chart" style="width: 900px; height: 500px"></div>
-            <div id="curve_chart2" style="width: 900px; height: 500px"></div> -->
-            <div id="exampleChart"></div>
+            <div id="globalChart"></div>
         </div>
 
     </div>
