--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -70,9 +70,9 @@
 <div class="algorithmBox panel panel-default" style="margin: 0;">
     <div class="panel-heading" data-toggle="collapse" data-target="#shuffleSetup">Shuffle setup </div>
     <div class="panel-body collapse container-fluid" id="shuffleSetup">
-    <div class="row" id="shuffleRow">
-    <div><button type='button' id='addAlg'><span aria-hidden='true'>+</span> </button></div>
-    </div>
+        <div id='addAlg'><span class="glyphicon glyphicon-plus-sign btn-lg addAlg" aria-hidden='true' data-toggle="tooltip" title="Add more criteria to shuffle by."></span></div>
+        <div class="row" id="shuffleRow">
+        </div>
     </div>
 </div>
 
@@ -90,38 +90,38 @@
     <select style="width: 50px;" id="iterationSelect"></select>
     <button style="width: 125px; float:left;" class="form-control" id="loadIteration">Load Iteration</button>
 </div>
-    <div class="main">
+<div class="main">
 
-            <div class="members">
-                <p style="font-size: large">Subject Pool</p>
+    <div class="members">
+        <p style="font-size: large">Subject Pool</p>
 
-                <div id="subjects" class="names">
-                    
-                </div>
-                <br><br><br>
+        <div id="subjects" class="names">
 
-
-            </div>
-
-
-            <div class="teams">
-                <p style="font-size: large; text-align: center">Sandbox</p>
-                <!-- This is how the team boxes will look like -->
-                <!-- <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"></div> -->
-                <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
-            </div>
-
-        <div class="mainChart" id="mainChart">
-            <p style="font-size: large; text-align: center">Charts</p>
-            <div id="poolChart"></div>
-            <div id="globalChart"></div>
         </div>
+        <br><br><br>
+
 
     </div>
 
 
-    <br>
-    <div id="dialog-confirm"></div>
+    <div class="teams">
+        <p style="font-size: large; text-align: center">Sandbox</p>
+        <!-- This is how the team boxes will look like -->
+        <!-- <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"></div> -->
+        <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
+    </div>
+
+    <div class="mainChart" id="mainChart">
+        <p style="font-size: large; text-align: center">Charts</p>
+        <div id="poolChart"></div>
+        <div id="globalChart"></div>
+    </div>
+
+</div>
+
+
+<br>
+<div id="dialog-confirm"></div>
 
 </body>
 
