--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <link type="text/css" rel="stylesheet" href="APIs/jsgrid/jsgrid.min.css" />
     <link type="text/css" rel="stylesheet" href="APIs/jsgrid/jsgrid-theme.min.css" />
-    <script src="APIs/jsgrid/jsgrid.min.js"></script>
+    <script src="APIs/jsgrid/jsgrid.js"></script>
     <script src="scripts/teamSetupJS.js"></script>
     <script src="scripts/charts.js"></script>
     <script src="scripts/jquery.csv-0.71.min.js"></script>
