--- a/src/views/index.html
+++ b/src/views/index.html
@@ -207,7 +207,7 @@
     <div class="main">
 
         <div class="background">
-        <img src="../Images/Storm.png" style="width: 100%;top:auto;">
+        <img src="../images/Storm.png" style="width: 100%;top:auto;">
         </div>
         <div class="container">
         <div class="jumbotron">
