--- a/src/views/index.html
+++ b/src/views/index.html
@@ -199,7 +199,7 @@
         </div>
         <div class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="/demo">Try it out</a></li>
+        <li><a href="/about">About</a></li>
         </div>
     </div>
 </nav>
@@ -245,20 +245,7 @@
 
     </div>
 
-        <footer class="footer">
-            <div class="footerMenu">
-                <table id="tableMenu">
-                    <tr id="tableMenu">
-                        <th id="tableMenu"><input id="homeButton" type="text" value="Home"
-                                                  onclick="window.location='/';" /></th>
-                        <th id="tableMenu"><input id="aboutButton" type="text" value="About"
-                                                  onclick="window.location='/about';" /></th>
-                        <th id="tableMenu"><input id="contactButton" type="text" value="Contact Us"
-                                                  onclick="window.location='/contact';" /></th>
-                    </tr>
-                </table>
-            </div>
-        </footer>
+
 </div>
 <div id="errorDialog"></div>
 </body>
